add input search alert

--- a/index.html
+++ b/index.html
@@ -35,7 +35,26 @@
     </header>
 
     <main>
-      <div class="container__cards"></div>
+      <div class="container__alert">
+        <div class="alert__content" id="cookiesPopup">
+          <button class="close">✖</button>
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/2731/2731811.png"
+            alt="cookies-img"
+          />
+          <p>sorry data not found, reload the page please</p>
+          <button class="btn__accept">That's fine!</button>
+        </div>
+      </div>
+      <div class="container__cards parent"></div>
+      <div class="btn__add--element">
+        <a href=""
+          ><img
+            src="https://cdn-icons-png.flaticon.com/512/6659/6659650.png"
+            alt=""
+        /></a>
+      </div>
     </main>
+    <script type="module" src="/JS/index.js"></script>
   </body>
 </html>
