add createElement, comments and single pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel="shortcut icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
@@ -48,13 +49,12 @@
       </div>
       <div class="container__cards parent"></div>
       <div class="btn__add--element">
-        <a href=""
+        <a href="./editCard.html"
           ><img
             src="https://cdn-icons-png.flaticon.com/512/6659/6659650.png"
             alt=""
         /></a>
       </div>
-      <div>fjsfopjsfjsofjsjfsjfsfpjsfsfjpsofjosjfjs</div>
     </main>
 
     <script type="module" src="/JS/index.js"></script>
