--- a/singlePage.html
+++ b/singlePage.html
@@ -3,15 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./css/singlePage.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <div>
-        <input type="text" />
+      <div class="container__logo">
+        <img src="img/Nintendo.svg.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="container__cards"></div>
+      <div class="comments">
+        <div class="container__input--comments"> <textarea name="" id="" cols="30" rows="10"></textarea>
+          <button>up</button></div>
+          <div class="container__comments--values"></div>
+      </div>
+      
+    </main>
+    <footer></footer>
+    <script type="module" src="./JS/singlePage.js"></script>
   </body>
 </html>
