--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="/css/index.css" />
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
@@ -47,6 +47,9 @@
           <button class="btn__accept">That's fine!</button>
         </div>
       </div>
+
+      <div class="container__feature"></div>
+
       <div class="container__cards parent"></div>
       <div class="btn__add--element">
         <a href="./editCard.html"
