--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       </div>
 
       <div class="form__header">
-        <select name="" id=""></select>
-        <select name="" id=""></select>
+        <select name="" id="select__tags">
+          <option value="1">Animals</option>
+          <option value="">Nature</option>
+          <option value="">Food</option>
+          <option value="">Life style</option>
+          <option value="">Travel</option>
+          <option value="">Sports</option>
+        </select>
         <div class="inpt__wrapper">
           <input type="text" placeholder="Search" id="inpt__search" />
           <svg
