fix css for index and single page

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
       <div class="form__header">
         <select name="" id="select__tags">
           <option value="1">Animals</option>
-          <option value="">Nature</option>
-          <option value="">Food</option>
-          <option value="">Life style</option>
-          <option value="">Travel</option>
-          <option value="">Sports</option>
+          <option value="2">Nature</option>
+          <option value="3">Food</option>
+          <option value="4">Life style</option>
+          <option value="5">Travel</option>
+          <option value="6">Sports</option>
         </select>
+
         <div class="inpt__wrapper">
           <input type="text" placeholder="Search" id="inpt__search" />
           <svg
@@ -54,8 +55,14 @@
         </div>
       </div>
 
-      <div class="container__feature"></div>
+      <div class="container__container--feature">
+        <div class="container__title--feature">
+          <h1 class="h1__features lineSpecialties">FEATURES SECTION</h1>
+        </div>
+        <div class="container__feature"></div>
+      </div>
 
+      <h1 class="h1__regular--section">Regular Section</h1>
       <div class="container__cards parent"></div>
       <div class="btn__add--element">
         <a href="./editCard.html"
