--- a/singlePage.html
+++ b/singlePage.html
@@ -35,6 +35,13 @@
               alt=""
             />
           </button>
+          <div class="btn__home">
+            <a href="./index.html"
+              ><img
+                src="https://cdn-icons-png.flaticon.com/512/8244/8244509.png"
+                alt=""
+            /></a>
+          </div>
         </div>
       </div>
 
